@@ -3,18 +3,20 @@ FROM wkronmiller/scala-sbt
 ENV workdir /opt
 ENV vehicledir $workdir/Vehicle
 ENV simdir $vehicledir/autoSim
-
-COPY . $workdir/
-
-RUN cd $vehicledir && sbt update && sbt compile && cd -
+ENV SBT_OPTS "-Xmx90G -XX:+UseConcMarkSweepGC"
 
 # Install NodeJs
 RUN apt-get install -y sudo
 RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
 RUN sudo apt-get install -y nodejs
 RUN npm install -g yarn
+
+COPY . $workdir/
+
+RUN cd $vehicledir && sbt update && sbt compile && cd -
+
 RUN cd $simdir && yarn
 
 WORKDIR $simdir
 
-ENTRYPOINT ["yarn", "start"]
+CMD ["yarn", "start"]
